добавил еще блок

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_svg: ^1.1.1+1
+  flutter_svg: ^1.1.4
   hexcolor: ^2.0.7
   flutter_emoji: ^2.4.0
 
